--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -4,7 +4,9 @@
     text-align: center;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .container .weatherDetail {
