--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,42 @@
 .app {
+    height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
+    grid-template-rows: 1fr 2fr 2fr;
     grid-template-areas: 
         "header header"
         "weatherIcon details";
-    grid-row-gap: 50px;
+    // grid-row-gap: 50px;
+    background: linear-gradient(to top, #2980b9, #6dd5fa, #ffffff);
 }
 
 .header {
     grid-area: header;
+}
+
+.scrollingText {
+    height: 30px;
+    overflow: hidden;
+    position: relative;
+
+    p {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        line-height: 30px;
+        text-align: center;
+        animation: scroll 30s linear infinite;
+    }
+
+    @keyframes scroll { 
+        from {
+            transform: translateX(100%)
+        }
+        to {
+            transform: translateX(-100%)
+        }
+    }
 }
 
 .weatherIcon {
@@ -20,3 +48,4 @@
 .details {
     grid-area: details;
 }
+
