--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -2,13 +2,19 @@
     // height: fit-content;
     // width: fit-content;
     text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: space-evenly;
+    // align-items: center;
+    // flex-wrap: wrap;
 }
 
 .container .weatherDetail {
     margin: 10px;
+}
+
+.details {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row-gap: 5px;
 }
