--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,15 @@
 .app {
     height: 100%;
+    width: 100%;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 0.5fr 2fr 2fr;
+    grid-template-rows: 0.25fr 2fr 2fr;
     grid-template-areas: 
         "header header"
         "weatherIcon details"
         "weatherPlot weatherPlot";
     // grid-row-gap: 50px;
-    background: linear-gradient(to top, #2980b9, #6dd5fa, #ffffff);
+    background: linear-gradient(to top, #81cdff, #b9ecff, #ffffff);
 }
 
 .header {
