added axis labels

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 .app {
     height: 100%;
     width: 100%;
+    padding: 5px;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 0.25fr 2fr 2fr;
