changing the styling

--- a/src/components/Tilt/Tilt.scss
+++ b/src/components/Tilt/Tilt.scss
@@ -1,9 +1,10 @@
 .tilt {
     width: fit-content;
     height: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // position: relative;
 
     .innerTilt {
         display: flex;
