--- a/src/App.scss
+++ b/src/App.scss
@@ -4,13 +4,13 @@
     padding: 5px;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 0.25fr 2fr 2fr;
+    grid-template-rows: 0.25fr 1.75fr 2fr;
     grid-template-areas: 
         "header header"
         "weatherIcon details"
         "weatherPlot weatherPlot";
     // grid-row-gap: 50px;
-    background: linear-gradient(to top, #81cdff, #b9ecff, #ffffff);
+    background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
 }
 
 .header {
@@ -54,5 +54,31 @@
 
 .weatherPlot {
     grid-area: weatherPlot;
+}
+
+.tilt {
+    // width: fit-content;
+    // height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    position: relative;
+
+    .innerTilt {
+        position: absolute;
+        top: 25%;
+        // display: flex;
+        // flex: 1;
+        // height: 100%;
+        // width: 100%;
+        will-change: transform;
+        transform-style: preserve-3d;
+        transform-origin: center center;
+        perspective-origin: center center;
+    }
+
+    &:hover {
+        z-index: 1;
+    }
 }
 
