--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
+body {
+    background-attachment: fixed; 
+    background-size: cover;
+    height: 100%;  
+    background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
+}
+
 .app {
     height: 100%;
     width: 100%;
@@ -10,7 +17,7 @@
         "weatherIcon details"
         "weatherPlot weatherPlot";
     // grid-row-gap: 50px;
-    background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
+    // background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
 }
 
 .header {
