--- a/src/components/WeatherDetail/WeatherDetail.scss
+++ b/src/components/WeatherDetail/WeatherDetail.scss
@@ -3,6 +3,15 @@
     // justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    // box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);   
+
+    // &:before {
+    //     content: "";
+    //     background: inherit;
+    //     z-index: -1;
+    //     box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+    //     filter: blur(10px);
+    // }
 
     p {
         width: 100%;
