--- a/src/components/ForecastPlot/ForecastPlot.scss
+++ b/src/components/ForecastPlot/ForecastPlot.scss
@@ -22,12 +22,16 @@
 div.toolTip {	
   position: absolute;			
   text-align: center;			
-  width: 60px;					
-  height: 28px;					
-  padding: 2px;				
-  font: 12px sans-serif;		
+  width: 80px;					
+  height: fit-content;					
+  padding: 15px;				
+  // font: 12px sans-serif;		
   background: lightsteelblue;	
   border: 0px;		
   border-radius: 8px;			
-  pointer-events: none;			
+  pointer-events: none;	
+  
+  p {
+    margin: 0;
+  }
 }
