--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@ body {
     background-attachment: fixed; 
     background-size: cover;
     height: 100%;  
+    width: 100vw;
     background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
 }
 
