--- a/src/components/ForecastPlot/ForecastPlot.scss
+++ b/src/components/ForecastPlot/ForecastPlot.scss
@@ -1,3 +1,7 @@
+// .plot {
+//   position: relative;
+// }
+
 .axis path,
 .axis line {
   fill: none;
@@ -33,5 +37,20 @@ div.toolTip {
   
   p {
     margin: 0;
+  }
+
+  &:after {
+    box-sizing: border-box;
+    display: inline;
+    font-size: 10px;
+    width: 100%;
+    line-height: 1;
+    color: url(#temp-gradient);
+    content: "\25BC";
+    position: absolute;
+    top: -8px;
+    left: 0;
+    transform: rotate(180deg);
+    text-align: center;
   }
 }
