--- a/src/components/ForecastPlot/ForecastPlot.scss
+++ b/src/components/ForecastPlot/ForecastPlot.scss
@@ -29,11 +29,10 @@ div.toolTip {
   width: 80px;					
   height: fit-content;					
   padding: 15px;				
-  // font: 12px sans-serif;		
-  background: lightsteelblue;	
-  border: 0px;		
+  background: lightsteelblue;		
   border-radius: 8px;			
   pointer-events: none;	
+  border: 1px solid;
   
   p {
     margin: 0;
