building out background image

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     height: 100%;  
     width: 100vw;
-    background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
+    // background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
 }
 
 .app {
