--- a/src/App.scss
+++ b/src/App.scss
@@ -65,8 +65,6 @@ body {
 }
 
 .tilt {
-    // width: fit-content;
-    // height: fit-content;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -74,15 +72,12 @@ body {
 
     .innerTilt {
         position: absolute;
-        top: 25%;
-        // display: flex;
-        // flex: 1;
-        // height: 100%;
-        // width: 100%;
+        top: 15%;
         will-change: transform;
         transform-style: preserve-3d;
         transform-origin: center center;
         perspective-origin: center center;
+        // background-image: radial-gradient(#e66465, transparent);
     }
 
     &:hover {
