--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -2,14 +2,61 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
     z-index: -5;
 }
 
 .mountains {
     position: absolute;
-    height: 35%;
+    height: 50%;
     width: 100%;
-    background: #d44D4f;
+    // background: radial-gradient(filter: opacity(0.2));
     bottom: 0;
-    left: 0;
+    left: 0;    
+
+    .small-mountain-left {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 25.1%;
+        height: 40%;
+        background: #AF7B53;
+        // background-image: linear-gradient(to top, transparent 0%, #AF7B53 100%);
+        clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+        z-index: 2;
+    }
+
+    .small-mountain-right {
+        position: absolute;
+        bottom: 0;
+        left: 25%;
+        width: 25%;
+        height: 40%;
+        background: #AB936D;
+        clip-path: polygon(0 1%, 0% 100%, 100% 100%);
+        z-index: 2;
+    }
+
+    .mountain-left {
+        position: absolute;
+        bottom: 0;
+        right: 35%;
+        width: 35.1%;
+        height: 60%;
+        background: #AF7B53;
+        // background-image: linear-gradient(to top, transparent 0%, #AF7B53 100%);
+        clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+        z-index: 3;
+    }
+
+    .mountain-right {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 35%;
+        height: 60%;
+        background: #AB936D;
+        clip-path: polygon(0 1%, 0% 100%, 100% 100%);
+        z-index: 3;
+    }
 }
