--- a/src/components/Tilt/Tilt.scss
+++ b/src/components/Tilt/Tilt.scss
@@ -13,6 +13,10 @@
         transform-style: preserve-3d;
         transform-origin: center center;
         perspective-origin: center center;
+        
+        // i {
+        //     background: radial-gradient(#e66465, #9198e5)
+        // }
     }
 
     &:hover {
