--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -46,6 +46,7 @@
         background: #AF7B53;
         // background-image: linear-gradient(to top, transparent 0%, #AF7B53 100%);
         clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+        opacity: 0.9;
         z-index: 2;
     }
 
@@ -69,6 +70,7 @@
         background: #AF7B53;
         // background-image: linear-gradient(to top, transparent 0%, #AF7B53 100%);
         clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+        opacity: 0.6;
         z-index: 1;
     }
 
@@ -80,6 +82,7 @@
         height: 35%;
         background: #AB936D;
         clip-path: polygon(0 1%, 0% 100%, 100% 100%);
+        opacity: 0.6;
         z-index: 1;
     }
 
@@ -115,6 +118,7 @@
         background: #AF7B53;
         // background-image: linear-gradient(to top, transparent 0%, #AF7B53 100%);
         clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+        opacity: 0.7;
         z-index: 1;
     }
 
@@ -126,6 +130,7 @@
         height: 32%;
         background: #AB936D;
         clip-path: polygon(0 1%, 0% 100%, 100% 100%);
+        opacity: 0.7;
         z-index: 1;
     }
 }
