--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -2,8 +2,15 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
     z-index: -5;
+}
+
+.day {
+    background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
+}
+
+.night {
+    background: linear-gradient(to bottom, #131862, #2e4482, #546bab, #87889c, #bea9de);
 }
 
 .mountains {
