--- a/src/App.scss
+++ b/src/App.scss
@@ -3,13 +3,15 @@ body {
     background-size: cover;
     height: 100%;  
     width: 100vw;
+    margin: 0;
+    padding: 0;
     // background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
 }
 
 .app {
     height: 100%;
     width: 100%;
-    padding: 5px;
+    // padding: 5px;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 0.25fr 1.75fr 2fr;
