--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -13,6 +13,25 @@
     background: linear-gradient(to bottom, #131862, #2e4482, #546bab, #87889c, #bea9de);
 }
 
+.sun, .moon {
+    position: absolute;
+    left: 25%;
+    top: 40%;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.sun {
+    background: yellow;
+    box-shadow: 0px 0px 60px 5px yellow;  
+}
+
+.moon {
+    background: white;
+}
+
 .mountains {
     position: absolute;
     height: 50%;
