--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -26,10 +26,115 @@
 .sun {
     background: yellow;
     box-shadow: 0px 0px 60px 5px yellow;  
+
+    .ray-container {
+        position: absolute;
+        // margin: auto;
+        top: 0px;
+        left: 0;
+        right: 0;
+        bottom: 0;	
+        width: 80px;  
+        animation: ray_anim 120s linear infinite;
+
+        .ray {
+            position: absolute;
+            margin-top: 10px;
+            margin-left: 15px;
+            border-radius: 80% 80% 0 0;
+            opacity: 0.2;
+            background: linear-gradient(to top, rgba(255, 255, 0, 0) 0%, rgba(255, 255, 0, 0.8) 50%, rgba(255, 255, 0, 0) 100%); 
+        }
+
+        .ray1 {    
+            height: 170px;
+            width: 30px;
+            transform: rotate(180deg);
+            top: -175px;
+            left: 15px;
+        }
+
+        .ray2 {
+            height: 100px;
+            width: 8px;
+           transform: rotate(220deg);
+            top: -90px;
+            left: 75px;
+        }
+
+        .ray3 {
+            height: 170px;
+            width: 50px;
+            transform: rotate(250deg);
+            top: -80px;
+            left: 100px;
+        }
+
+        .ray4 {
+            height: 120px;
+            width: 14px;
+            transform: rotate(305deg);
+            top: 30px;
+            left: 100px;
+        }
+
+        .ray5 {
+            height: 140px;
+            width: 30px;
+            transform: rotate(-15deg);
+            top: 60px;
+            left: 40px;
+        }
+
+        .ray6 {
+            height: 90px;
+            width: 50px;
+            transform: rotate(30deg);
+            top: 60px;
+            left: -40px;
+        }
+
+        .ray7 {
+            height: 180px;
+            width: 10px;
+            transform: rotate(70deg);
+            top: -35px;
+            left: -40px;
+        }
+
+        .ray8 {
+            height: 120px;
+            width: 30px;
+            transform: rotate(100deg);
+            top: -45px;
+            left: -90px;
+        }
+
+        .ray9 {
+            height: 80px;
+            width: 10px;
+            transform: rotate(120deg);
+            top: -65px;
+            left: -60px;
+        }
+        .ray10 {
+            height: 190px;
+            width: 23px;
+            transform: rotate(150deg);
+            top: -185px;
+            left: -60px;
+        }
+
+        @keyframes ray_anim { 
+            from {transform: rotate(0deg); transform: rotate(0deg);}    
+            to {transform: rotate(360deg); transform: rotate(360deg);}
+        }
+    }
 }
 
 .moon {
     background: white;
+    box-shadow: 0px 0px 60px 5px white;
 }
 
 .mountains {
