--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@ body {
     background-attachment: fixed; 
     background-size: cover;
     height: 100%;  
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
     // background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
@@ -14,13 +14,12 @@ body {
     // padding: 5px;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 0.25fr 1.75fr 2fr;
+    grid-template-rows: 0.25fr 1fr 1fr 2fr;
     grid-template-areas: 
         "header header"
         "weatherIcon details"
+        ". ."
         "weatherPlot weatherPlot";
-    // grid-row-gap: 50px;
-    // background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
 }
 
 .header {
@@ -58,15 +57,8 @@ body {
     perspective-origin: center;
 }
 
-.details {
-    grid-area: details;
-}
-
-.weatherPlot {
-    grid-area: weatherPlot;
-}
-
 .tilt {
+    grid-area: details;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -85,5 +77,32 @@ body {
     &:hover {
         z-index: 1;
     }
+
+    .details {
+        margin-right: 60px;
+        background: rgba(240, 240, 240, 0.3);
+        border: solid 1px black;
+        border-radius: 10px;
+    }
 }
+
+.weatherPlot {
+    grid-area: weatherPlot;
+}
+
+.loadingContent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #000;
+    font-weight: bold;
+    padding-top: 15px;
+
+    p {
+        display: inline;
+        margin-right: 5px;
+    }
+}
+
 
