--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -7,10 +7,12 @@
 
 .day {
     background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);
+    animation: fade_in 2s;
 }
 
 .night {
     background: linear-gradient(to bottom, #131862, #2e4482, #546bab, #87889c, #bea9de);
+    animation: fade_in 2s;
 }
 
 .sun, .moon {
@@ -173,18 +175,19 @@
     }
 }
 
+@keyframes fade_in {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 .mountains {
     position: absolute;
     height: 50%;
     width: 100%;
     bottom: 0;
     left: 0;
+    overflow: hidden;
     animation: fade_in 5s;
-
-    @keyframes fade_in {
-        from {opacity: 0;}
-        to {opacity: 1;}
-    }
     
     .large-mountain-farleft {
         position: absolute;
@@ -268,6 +271,17 @@
         // background-image: linear-gradient(to top, transparent 0%, #AF7B53 100%);
         clip-path: polygon(100% 0, 0% 100%, 100% 100%);
         z-index: 3;
+
+        // .large-mountain-cap {
+        //     position: absolute;
+        //     top: 0;
+        //     left: 90%;
+        //     width: 100%;
+        //     height: 35%;
+        //     background: black;
+        //     clip-path: polygon(50% 0%, 0 55%, 100% 55%);
+        //     z-index: 4;
+        // }
     }
 
     .large-mountain-right {
