--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,12 +1,8 @@
 .container {
-    // height: fit-content;
-    // width: fit-content;
     text-align: center;
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-evenly;
-    // align-items: center;
-    // flex-wrap: wrap;
+    // background: rgba(240, 240, 240, 0.8);
+    // border: solid 1px black;
+    // border-radius: 10px;
 }
 
 .container .weatherDetail {
