--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -15,6 +15,12 @@
     animation: fade_in 2s;
 }
 
+// @keyframes sunrise {
+//     0% {opacity: 0.8; background: linear-gradient(to top, #820, #610, #400, #100);}
+//     50% {opacity: 1;}
+//     100% {opacity: 1; background: linear-gradient(to bottom, #81cdff, #b9ecff, #ffffff);}
+// }
+
 .sun, .moon {
     position: absolute;
     left: 25%;
@@ -178,6 +184,69 @@
 @keyframes fade_in {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+.clouds {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    margin: 0;
+    z-index: 5;
+    // overflow: hidden;
+    animation: fade_in 2s;
+
+    .cloud {
+        position: absolute;
+        height: 10px;
+        background: white;
+        border-radius: 10px;
+        animation: cloud_drift 20s linear infinite;
+    }
+
+    .small-cloud {
+        width: 20px;
+    }
+
+    .cloud1 {
+        top: 55%;
+        left: 75%;   
+        z-index: 1;
+    }
+
+    .cloud2 {
+        top: 115%;
+        left: 42%;   
+        z-index: 1;
+    }
+
+    .cloud3 {
+        top: 145%;
+        left: 65%;   
+        z-index: 1;
+    }
+
+    .cloud4 {
+        top: 65%;
+        left: 15%;   
+        z-index: 1;
+    }
+
+    .cloud5 {
+        top: 105%;
+        left: 95%;   
+        z-index: 1;
+    }
+
+    .large-cloud {
+        width: 60px;
+    }
+}
+
+@keyframes cloud_drift {
+    from {transform: translateX(0)}
+    to {transform: translateX(-400%)}
 }
 
 .mountains {
