--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -202,11 +202,24 @@
         height: 10px;
         background: white;
         border-radius: 10px;
+        box-shadow: 0 0 50px 2px #BFD5E0;
         animation: cloud_drift 20s linear infinite;
     }
 
     .small-cloud {
-        width: 20px;
+        height: 10px;
+        width: 40px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 15%;
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            background-color: inherit;
+        }
     }
 
     .cloud1 {
@@ -235,12 +248,35 @@
 
     .cloud5 {
         top: 105%;
-        left: 95%;   
+        left: 90%;   
         z-index: 1;
     }
 
     .large-cloud {
-        width: 60px;
+        height: 20px;
+        width: 80px;
+
+        &::before{
+            content: "";
+            position: absolute;
+            bottom: 30%;
+            left: 15%;
+            height: 40px;
+            width: 40px;
+            border-radius: 50%;
+            background-color: inherit;
+        }
+
+        &::after{
+            content: "";
+            position: absolute;
+            bottom: 60%;
+            left: 60%;
+            height: 15px;
+            width: 15px;
+            border-radius: 50%;
+            background-color: inherit;
+        }
     }
 }
 
