--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -296,7 +296,7 @@
     
     .large-mountain-farleft {
         position: absolute;
-        bottom: 0;
+        bottom: -1px;
         left: -13%;
         width: 20%;
         height: 55%;
@@ -341,7 +341,7 @@
 
     .small-mountain-left {
         position: absolute;
-        bottom: 0;
+        bottom: -1px;
         left: 0;
         width: 25.1%;
         height: 40%;
@@ -387,7 +387,7 @@
 
     .medium-mountain-left {
         position: absolute;
-        bottom: 0;
+        bottom: -1px;
         left: 18%;
         width: 25.1%;
         height: 35%;
@@ -434,7 +434,7 @@
 
     .large-mountain-left {
         position: absolute;
-        bottom: 0;
+        bottom: -1px;
         right: 35%;
         width: 35.1%;
         height: 60%;
@@ -479,7 +479,7 @@
 
     .medium-mountain-farleft {
         position: absolute;
-        bottom: 0;
+        bottom: -1px;
         right: 4%;
         width: 20%;
         height: 32%;
