--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -7,10 +7,18 @@
 
 .container .weatherDetail {
     margin: 10px;
+    padding: 5px;
+    
+    p {
+        width: 100%;
+        align-self: center;
+        margin: 0;
+    }
 }
 
 .details {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
     grid-row-gap: 5px;
 }
