styling unit toggle

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@ body {
 .app {
     height: 100%;
     width: 100%;
+    // position: relative;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 0.25fr 1fr 1fr 2fr 0.15fr;
@@ -20,6 +21,61 @@ body {
         "weatherPlot weatherPlot"
         ". .";
     overflow: hidden;
+}
+
+.unitToggle {
+    position: fixed;
+    top: 5px;
+    right: 15px;
+    z-index: 5;
+
+    input[type=checkbox] {
+        height: 0%;
+        width: 0%;
+        visibility: hidden;
+    }
+
+    label {
+        cursor: pointer;
+        position: relative;
+        display: block;
+        text-indent: 35px;
+        width: 70px;
+        height: 30px;
+        border: solid 0.5px rgba(0, 0, 0, 0.5);
+        background: lightgrey;
+        border-radius: 100px;
+
+        &::after {
+            content: "ºF";
+            color: black;
+            cursor: pointer;
+            position: absolute;
+            top: 2.5px;
+            left: 2.5px;
+            width: 25px;
+            height: 25px;
+            background: #fff;
+            border-radius: 90px;
+            transition: 0.3s;
+        }
+
+        &:active::after {
+            width: 35px;
+        }
+    }
+
+    input:checked + label {
+        background: #e1f6ff;
+    }
+
+    input:checked + label::after {
+        content: "ºC";
+        background: #fff;
+        text-indent: -29px;
+        left: calc(100% - 2.5px);
+        transform: translateX(-100%);
+    }
 }
 
 .header {
