--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,9 @@ body {
     z-index: 5;
 
     input[type=submit] {
-        visibility: hidden;
+        display: none;
+        height: 100%;
+        width: 100%;
     }
 
     span { 
