--- a/src/App.scss
+++ b/src/App.scss
@@ -30,12 +30,6 @@ body {
     left: 15px;
     z-index: 5;
 
-    input[type=submit] {
-        display: none;
-        height: 100%;
-        width: 100%;
-    }
-
     span { 
         visibility: hidden;
 
@@ -77,7 +71,7 @@ body {
         transition: all 0.5s;
 
         &:focus {
-            width: 150px;
+            width: 125px;
             background-color: #e1f6ff;
             box-shadow: 0 0 5px rgba(109, 207, 246, 0.5);
         }
@@ -93,7 +87,7 @@ body {
 
     input[type=search]:focus + span {
         visibility: visible;
-        transition: all 0.5s;
+        transition: all 1s 0.5s;
     }
 }
 
@@ -181,12 +175,6 @@ body {
     }
 }
 
-// .weatherIcon {
-//     grid-area: weatherIcon;
-//     perspective: 50px;
-//     perspective-origin: center;
-// }
-
 .tilt {
     grid-area: details;
     margin-right: 8%;
@@ -231,8 +219,10 @@ body {
     background: darkgrey;
     margin-top: 45px;
     padding-bottom: 10px;
-    font-family: Copperplate,Copperplate Gothic Light,fantasy;
+    font-family: Copperplate, Copperplate Gothic Light, fantasy;
     font-size: 0.75rem;
+    border-top: solid black 0.5px;
+    box-shadow: 0 0 5px rgba(169, 169, 169, 1);
 
     a {
         text-decoration: none;
