--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,6 @@ body {
 .app {
     height: 100%;
     width: 100%;
-    // position: relative;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 0.35fr 1fr 1fr 2fr 0.15fr auto;
@@ -29,27 +28,6 @@ body {
     top: 12px;
     left: 15px;
     z-index: 5;
-
-    // span { 
-    //     visibility: hidden;
-
-    //     .checkIcon {
-    //         position: fixed;
-    //         top: 32px;
-    //         left: 170px;
-    //         color: #385fa0;
-
-    //         svg {
-    //             width: 12px;
-    //             height: 12px;
-    //         }
-
-    //         &:hover {
-    //             cursor: pointer;
-    //             color: green;
-    //         }
-    //     }
-    // }
 
     .searchIcon {
         position: fixed;
@@ -149,65 +127,70 @@ body {
 
 .header {
     grid-area: header;
-}
 
-.scrollingText {
+    .title {
+        text-shadow: 1px 1px 2px black;
+        font-family: Copperplate, Copperplate Gothic Light, fantasy;
+    }
+    
+    .scrollingText {
     height: 30px;
-    // overflow: hidden;
     position: relative;
     z-index: -1;
 
-    p {
-        position: absolute;
-        right: 0;
-        width: fit-content;
-        height: 100%;
-        margin: 0;
-        padding: 0 8px 0 8px;
-        line-height: 30px;
-        text-align: center;
-        background: white;
-        border-radius: 50px;
-        animation: scroll 30s linear infinite;
-
-        &::before {
-            content: "";
+        p {
+            color: black;
             position: absolute;
-            left: 25px;
-            bottom: 8px;
-            height: 70px;
-            width: 70px;
+            right: 0;
+            width: fit-content;
+            height: 100%;
+            margin: 0;
+            padding: 0 8px 0 8px;
+            line-height: 30px;
+            text-align: center;
             background: white;
-            border-radius: 50%;
-            z-index: -1;
+            border-radius: 50px;
+            animation: scroll 30s linear infinite;
+
+            &::before {
+                content: "";
+                position: absolute;
+                left: 45px;
+                bottom: 0px;
+                height: 70px;
+                width: 70px;
+                background: white;
+                border-radius: 50%;
+                z-index: -1;
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                left: 100px;
+                bottom: 0px;
+                height: 55px;
+                width: 55px;
+                background: white;
+                border-radius: 50%;
+                z-index: -1;
+            }
         }
 
-        &::after {
-            content: "";
-            position: absolute;
-            right: 75px;
-            bottom: 0px;
-            height: 55px;
-            width: 100px;
-            background: white;
-            border-radius: 50%;
-            z-index: -1;
-        }
-    }
 
 
-
-    @keyframes scroll { 
-        from {
-            right: -25%;
-            // transform: translateX(100%)
-        }
-        to {
-            // transform: translateX(-100%)
-            right: 100%;
+        @keyframes scroll { 
+            from {
+                right: -25%;
+            }
+            to {
+                right: 100%;
+            }
         }
     }
 }
+
+
 
 .tilt {
     grid-area: details;
