--- a/src/components/ForecastPlot/ForecastPlot.scss
+++ b/src/components/ForecastPlot/ForecastPlot.scss
@@ -1,3 +1,9 @@
+.d3plot {
+  background: rgba(240, 240, 240, 0.3);
+  border: solid 1px black;
+  border-radius: 10px;
+}
+
 .axis path,
 .axis line {
   fill: none;
